# keboola-api-documentation-mcp-server

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  sources.yaml
.github/: CODEOWNERS
.github/workflows/: auto-approve-docs.yml  test.yml  update-docs.yml
docs/apiary/: developer-portal-api.apib
docs/openapi/: metastore-service.json  query-service.json
src/keboola_docs_mcp/: __init__.py  cli.py  config.py  index.py  models.py  server.py  updater.py
src/keboola_docs_mcp/parsers/: __init__.py  apib.py  openapi.py
tests/: __init__.py  test_parsers.py  test_search.py
